Fix issue where the shopping cart was visible while closed

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -115,6 +115,8 @@ body {
   min-height: 800px; /* TODO: Remove after data is in place maybe? */
   margin-top: 26rem;
 
+  overflow-x: hidden;
+
   background-color: $primary;
   border-top: 12px solid $accent;
 
